Fix footer scaling on mobile
"Consultation" is a big word that doesn't render well with h2 class on
very small mobile devices. Fix it manually.

--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -113,6 +113,20 @@
         margin-bottom: 20px;
       }
 
+      h2 {
+        @include mobile {
+          font-size: 2.75rem;
+        }
+
+        @include mobile-xs {
+          font-size: 2.50rem;
+        }
+
+        @include mobile-s {
+          font-size: 2.0rem;
+        }
+      }
+
       span {
         font-size: 20px;
         display: block;
